# razer-mouse-battery

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp  mouse-battery-to-mqtt.service  publish-to-mqtt-openrazer.py  publish-to-mqtt.py  vcpkg.json
